Fixed java deprecation warnings, and other java warnings in the code from previous java verion upgrades